# apertium-krc

./: .gitattributes  .gitignore  Makefile.am  README  apertium-krc.Cyrl-Seegmiller.lexc  apertium-krc.Cyrl-Seegmiller.twol  apertium-krc.Seegmiller-Cyrl.lexc  apertium-krc.Seegmiller-Cyrl.twol  apertium-krc.krc.lexc  apertium-krc.krc.rlx  apertium-krc.krc.twol  apertium-krc.krc_Seegmiller.spellrelax  modes.xml
.circleci/: config.yml  cov.sh
test/: dative-gen-generator-expected.txt  dative-gen-generator-gold.txt  dative-gen-input.txt  dative-input.txt  dative-morph-expected.txt  dative-morph-gold.txt  harmony-gen-generator-expected.txt  harmony-gen-generator-gold.txt  harmony-gen-input.txt  harmony-input.txt  harmony-morph-expected.txt  harmony-morph-gold.txt  kün-gen-generator-expected.txt  kün-gen-generator-gold.txt  kün-gen-input.txt  kün-input.txt  kün-morph-expected.txt  kün-morph-gold.txt  miscellaneous-gen-generator-expected.txt  miscellaneous-gen-generator-gold.txt  miscellaneous-gen-input.txt  miscellaneous-input.txt  miscellaneous-morph-expected.txt  miscellaneous-morph-gold.txt  numerals-gen-generator-expected.txt  numerals-gen-generator-gold.txt  numerals-gen-input.txt  numerals-input.txt  numerals-morph-expected.txt  numerals-morph-gold.txt  tests.json  yots-gen-generator-expected.txt  yots-gen-generator-gold.txt  yots-gen-input.txt  yots-input.txt  yots-morph-expected.txt  yots-morph-gold.txt
tests/: dative.yaml  harmony.yaml  kün.yaml  miscellaneous.yaml  numerals.yaml  yots.yaml
tests/morphotactics/: Makefile
texts/puupankki/: puupankki.krc.conllu
